# stock-tracker

./: .env.example  .gitignore  CLAUDE.md  FinSight_AI_PRD.docx  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.aw_docs/: STATE.md  config.json
.aw_docs/tasks/: BOARD.md
.cursor/rules/: api-design.mdc  backend.mdc  common-aw-routing.mdc  data.mdc  frontend.mdc  infra.mdc  mobile.mdc  sdet.mdc  security.mdc  universal.mdc
.github/workflows/: ci.yml  landing-quality.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: .env.test  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
apps/web/: .env.example  lighthouserc.json  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
backend/: .env.example  README.md  main.py  makefile  pyproject.toml
backend/app/: __init__.py  cache.py  config.py  db.py  main.py  schemas.py
backend/app/routers/: stocks.py  watchlist.py
backend/app/services/: __init__.py  indicators.py  market_data.py  scoring.py  watchlist.py
backend/frontend/: __init__.py  api.py  app.py  components.py  theme.py
backend/tests/: conftest.py  test_cache.py  test_endpoints_v2.py  test_frontend_api.py  test_indicators.py  test_scoring.py  test_serialize.py  test_stocks.py  test_watchlist.py
infra/atlas/: README.md  news_embedding_idx.json
perf/: report-load.js
scripts/: forbid-verbs.sh
(+599 files in other folders)
