[project]
name = "backend"
version = "1.0.0"
description = "Cached, analyst-oriented stock research REST API over Yahoo Finance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "yfinance>=1.4",
    "pydantic>=2.9",
    "pandas>=2.2",
    "lxml>=5.0",
    "pymongo[srv]>=4.9",  # [srv] pulls dnspython, required for mongodb+srv:// URIs
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mongomock>=4.1",  # in-memory MongoDB for watchlist tests (no network)
]
ui = [
    "streamlit>=1.58",  # width='stretch' API (replaces removed use_container_width); verified version
    "plotly>=5.24",
    "requests>=2.32",
]

[tool.pytest.ini_options]
markers = [
    "integration: hits live Yahoo Finance (network, slow, rate-limited).",
]

[tool.ruff]
line-length = 100
